--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,3 @@
-
-
 body {
   color: #fff
 }
@@ -34,6 +32,16 @@ a:hover, a:focus, a:active {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.masthead::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background-image: url("../2019-08-24-West-Summit.jpg");
+  filter: saturate(40%);
+  filter: contrast(70%);
 }
 
 
