--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,6 @@ a:hover, a:focus, a:active {
   height: 100vh;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../2019-08-24-West-Summit.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -39,9 +38,8 @@ a:hover, a:focus, a:active {
   position: absolute;
   top: 0; left: 0;
   width: 100%; height: 100%;
+  filter: contrast(120%), brightness(60%);
   background-image: url("../2019-08-24-West-Summit.jpg");
-  filter: saturate(40%);
-  filter: contrast(70%);
 }
 
 
@@ -50,6 +48,11 @@ a:hover, a:focus, a:active {
   margin: 0;
   padding: 0;
   color: white;
+  line-height: 1.3;
+}
+
+.masthead h1 span {
+  background-color: rgba(30, 30, 30, 0.4);
 }
 
 @media (min-width: 992px) {
