--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,8 +100,10 @@ p {
 }
 
 .copyright {
-  font-size: .75rem;
-  color: 
+  font-size: .8rem;
+  color: #999;
+  text-align: center;
+  padding: 10px;
 }
 
 .footer {
