--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,9 @@ p {
 .video-container {
   position: relative;
   padding-bottom: 56.25%;
-  padding-top: 30px; height: 0; overflow: hidden;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
 }
  
 .video-container iframe,
@@ -79,13 +81,10 @@ p {
   line-height: 1.5;
 }
 
-@media (min-width: 992px) {
-  .masthead h1 {
-    font-size: 5.5rem;
-  }
-
+@media only screen and (max-width: 600px) {
   #title-text {
-    width: 90%;
+    font-size: 10vw;
+    margin: auto;
   }
 }
 
