--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,7 +47,15 @@ a:hover, a:focus, a:active {
 }
 
 .container {
-    width: 66%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    flex-direction: column;
+}
+
+.btn-sunrise-primary {
+    background-color: var(--primary-color);
 }
 
 p {
@@ -75,53 +83,39 @@ p {
 }
 
 .masthead {
-  min-height: 30rem;
-  position: relative;
-  display: table;
-  width: 100%;
-  height: 100vh;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
-  background-position: center center;
-  background-image: radial-gradient(#fff, #333), url("../splashpage.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-blend-mode: darken;
-  filter: grayscale(100%) brightness(70%);
+    min-height: 30rem;
+    position: relative;
+    display: table;
+    width: 100%;
+    height: 100vh;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+    background-position: center center;
+    background-image: radial-gradient(#fff, #111), url("../splashpage-grey.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: darken;
 }
 
 .masthead h1 {
-  font-size: 3rem;
-  margin: 0;
-  padding: 0;
-  color: white;
+    font-size: 4rem;
+    backdrop-filter: blur(3px);
 }
 
 @media screen and (max-width: 600px) {
     #title-text {
         font-size: 10vw;
-        margin: auto;
-    }
-
-    .container {
-        width: 90%;
+        /*margin: auto;*/
     }
 }
 
 @media screen and (orientation: landscape) and (max-width: 820px) {
-    #title-text {
-        padding-bottom: 40vh !important;
-    }
+    /*#title-text {*/
+    /*    padding-bottom: 40vh !important;*/
+    /*}*/
 }
 
 #title-text {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    padding-bottom: 7vh;
-    padding-right: 7vw;
-    text-align: right;
-    width: 66%;
 }
 
 .copyright {
