--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,8 +9,8 @@
 }
 
 body {
-    color: #fff;
-    background-color: #333;
+    color: var(--secondary-color);
+    background-color: var(--base-primary-color);
     font-family: 'Source Sans Pro', serif;
 }
 
@@ -47,6 +47,7 @@ a:hover, a:focus, a:active {
 }
 
 .container {
+    width: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,14 +55,7 @@ a:hover, a:focus, a:active {
     flex-direction: column;
 }
 
-.btn-sunrise-primary {
-    background-color: var(--primary-color);
-}
 
-.btn-sunrise-primary a {
-    color: inherit;
-    border-bottom: none;
-}
 
 p {
     text-align: justify;
@@ -108,10 +102,14 @@ p {
 }
 
 @media screen and (max-width: 600px) {
-    #title-text {
-        font-size: 10vw;
-        /*margin: auto;*/
-    }
+  #title-text {
+    font-size: 10vw;
+    margin: auto;
+  }
+
+  .container {
+    width: 90%;
+  }
 }
 
 @media screen and (orientation: landscape) and (max-width: 820px) {
@@ -153,14 +151,9 @@ p {
 
 
 .btn-primary {
-    background-color: #1D809F !important;
-    border-color: #1D809F !important;
-    color: #fff !important;
-}
-
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-    background-color: #155d74 !important;
-    border-color: #155d74 !important;
+    background-color: var(--primary-color) !important;
+    border-color: var(--primary-color) !important;
+    color: var(--base-primary-color) !important;
 }
 
 .btn-secondary {
@@ -169,9 +162,9 @@ p {
     color: #fff !important;
 }
 
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active,
 .btn-secondary:hover, .btn-secondary:focus, .btn-secondary:active {
-    background-color: #ba9106 !important;
-    border-color: #ba9106 !important;
+    filter: brightness(85%);
 }
 
 .btn-dark {
@@ -183,14 +176,19 @@ p {
     font-weight: 700;
 }
 
+.btn a {
+    color: inherit;
+    border-bottom: none;
+}
+
 .bg-primary {
-    background-color: #1D809F !important;
+    background-color: var(--primary-color) !important;
 }
 
 .text-primary {
-    color: #1D809F !important;
+    color: var(--secondary-color) !important;
 }
 
 .text-secondary {
-    color: #ecb807 !important;
+    color: var(--secondary-color) !important;
 }
