refactoring, ensuring mobile responsiveness

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,15 +11,15 @@
 body {
     color: var(--secondary-color);
     background-color: var(--base-primary-color);
-    font-family: 'Source Sans Pro', serif;
+    font-family: var(--font);
 }
 
 h1, h2 {
-    color: #ffde16;
+    color: var(--primary-color);
     text-align: center;
     margin-top: 2em;
     margin-bottom: 1.5em;
-    font-family: 'Source Sans Pro', serif;
+    font-family: var(--font);
     font-weight: bold;
     text-transform: uppercase;
 }
@@ -31,9 +31,9 @@ h3 {
 }
 
 a {
-    color: #ffde16;
+    color: var(--primary-color);
     text-decoration: none;
-    border-bottom: 2px solid #ffde16;
+    border-bottom: 2px solid var(--primary-color);
     transition: .5s ease;
 }
 
@@ -54,8 +54,6 @@ a:hover, a:focus, a:active {
     height: 100%;
     flex-direction: column;
 }
-
-
 
 p {
     text-align: justify;
@@ -102,20 +100,21 @@ p {
 }
 
 @media screen and (max-width: 600px) {
-  #title-text {
-    font-size: 10vw;
-    margin: auto;
-  }
+    #title-text {
+        font-size: 10vw;
+        margin: auto;
+    }
 
-  .container {
-    width: 90%;
-  }
+    .container {
+        width: 90%;
+    }
 }
 
 @media screen and (orientation: landscape) and (max-width: 820px) {
-    /*#title-text {*/
-    /*    padding-bottom: 40vh !important;*/
-    /*}*/
+    #title-text {
+        margin: auto;
+        font-size: 10vh;
+    }
 }
 
 #title-text {
